--- a/Challenges/C-1/index.html
+++ b/Challenges/C-1/index.html
@@ -86,8 +86,13 @@
       <p>Fresh potatoes</p>
       <button onclick="addToCart('Potato')">Buy</button>
     </div>
+    <div class="product">
+      <h2>Vegetables</h2>
+      <p>FRESH VEGETABLES</p>
+      <button onclick="addToCart('VEGETABLES')">Buy</button>
+    </div>
   </div>
-  
+
   <div id="my-cart">
     <h3>My Cart</h3>
     <div id="cart-items">
